//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  createdTickets Ticket [not null]
  matchingTickets Ticket [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Game {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  startTime DateTime [not null]
  homeTeam Team [not null]
  awayTeam Team [not null]
  homeSpread Int [not null]
  awaySpread Int [not null]
  league String [not null]
  homeTeamId String [not null]
  awayTeamId String [not null]
  tickets Ticket [not null]
}

Table Team {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  code String [unique, not null]
  name String [not null]
  fullName String [not null]
  awayGames Game [not null]
  homeGames Game [not null]
}

Table Ticket {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  creator User [not null]
  creatorId String [not null]
  matchingUser User
  matchingUserId String
  match Game [not null]
  matchId String [not null]
  homeSpread Int [not null]
  awaySpread Int [not null]
  isOpen Boolean [not null]
  amount Int [not null]
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Game.homeTeamId > Team.id

Ref: Game.awayTeamId > Team.id

Ref: Ticket.creatorId > User.id

Ref: Ticket.matchingUserId > User.id

Ref: Ticket.matchId > Game.id